fix(DatePicker): change max width tooltip, change placement error tooltip, fix bug with cropped block located on top

--- a/src/components/Tooltip/Tooltip.css
+++ b/src/components/Tooltip/Tooltip.css
@@ -1,4 +1,6 @@
 .ui-kit-tooltip {
+	max-width: 300px;
+
 	color: var(--base-strong);
 	font-size: var(--fs-sm);
 	line-height: var(--lh-sm-text);
